Assignment2_Zhao_Duo/tests/automated/tests/bad/Misc.calc
. .e .e+ .e- .e12 .e+12 .e-12 .E .E+ .E- .E12 .E+12 .E-12
.
.e
.e+
.e-
.e12
.e+12
.e-12
.E
.E+
.E-
.E12
.E+12
.E-12
